Fix DKMS: Variable specified in Makefile is KDIR, not KERNELDIR

--- a/dkms.conf
+++ b/dkms.conf
@@ -5,6 +5,6 @@ DEST_MODULE_LOCATION=/kernel/lib/
 BUILT_MODULE_NAME=tuxedo_keyboard
 BUILT_MODULE_LOCATION=src/
 
-MAKE="make -C . KERNELDIR=/lib/modules/${kernelver}/build"
+MAKE="make -C . KDIR=/lib/modules/${kernelver}/build"
 CLEAN="make -C src/ clean"
 AUTOINSTALL="yes"
