Change mode to BoxTextSelection

--- a/python/tuxedo_keyboard.desktop
+++ b/python/tuxedo_keyboard.desktop
@@ -4,6 +4,6 @@ Version=1.0
 Name=Tuxedo_Keyboard
 GenericName=Change keyboard color
 Type=Application
-Exec=pkexec /home/allardc/.local/share/tuxedo_keyboard/tuxedo_keyboard.py
-Icon=/home/allardc/.local/share/tuxedo_keyboard/tuxedo_keyboard.png
+Exec=pkexec /home/YOUR_HOME/.local/share/tuxedo_keyboard/tuxedo_keyboard.py
+Icon=/home/YOUR_HOME/.local/share/tuxedo_keyboard/tuxedo_keyboard.png
 Categories=Administration;
