--- a/dkms.conf
+++ b/dkms.conf
@@ -1,10 +1,10 @@
 PACKAGE_NAME=tuxedo-keyboard
-PACKAGE_VERSION=2.0.0
+PACKAGE_VERSION=2.0.1
 
 DEST_MODULE_LOCATION[0]="/kernel/lib/"
 BUILT_MODULE_NAME[0]="tuxedo_keyboard"
 BUILT_MODULE_LOCATION[0]="src/"
 
-MAKE[0]="make -C . KERNELDIR=/lib/modules/${kernelver}/build"
+MAKE[0]="make -C . KDIR=/lib/modules/${kernelver}/build"
 CLEAN="make -C . clean"
 AUTOINSTALL="yes"
