Update version to 2.0.2
Add tuxedo_keyboard.conf to packaging. Installs into
  /etc/modprobe.d/tuxedo_keyboard.conf

Add transitional package from tuxedo-keyboard-dkms to just
tuxedo-keyboard.

--- a/deb/module-name/DEBIAN/control
+++ b/deb/module-name/DEBIAN/control
@@ -3,6 +3,8 @@ Version: x.x.x
 Section: admin
 Priority: optional
 Depends: dkms (>= 1.95)
+Conflicts: tuxedo-keyboard-dkms (<= 2.0.0), tuxedo-wmi-dkms (<= 1.5.1)
+Replaces: tuxedo-keyboard-dkms (<= 2.0.0), tuxedo-wmi-dkms (<= 1.5.1)
 Maintainer: TUXEDO Computers GmbH <tux@tuxedocomputers.com>
 Homepage: https://www.tuxedocomputers.com
 Architecture: all
