Add basic driver structure for "new" clevo interface

--- a/dkms.conf
+++ b/dkms.conf
@@ -5,6 +5,10 @@ DEST_MODULE_LOCATION[0]="/kernel/lib/"
 BUILT_MODULE_NAME[0]="tuxedo_keyboard"
 BUILT_MODULE_LOCATION[0]="src/"
 
+DEST_MODULE_LOCATION[0]="/kernel/lib/"
+BUILT_MODULE_NAME[0]="clevo_acpi"
+BUILT_MODULE_LOCATION[0]="src/"
+
 MAKE[0]="make KDIR=/lib/modules/${kernelver}/build"
 CLEAN="make clean"
 AUTOINSTALL="yes"
