--- a/dkms.conf
+++ b/dkms.conf
@@ -5,9 +5,13 @@ DEST_MODULE_LOCATION[0]="/kernel/lib/"
 BUILT_MODULE_NAME[0]="tuxedo_keyboard"
 BUILT_MODULE_LOCATION[0]="src/"
 
-DEST_MODULE_LOCATION[0]="/kernel/lib/"
-BUILT_MODULE_NAME[0]="clevo_acpi"
-BUILT_MODULE_LOCATION[0]="src/"
+DEST_MODULE_LOCATION[1]="/kernel/lib/"
+BUILT_MODULE_NAME[1]="clevo_wmi"
+BUILT_MODULE_LOCATION[1]="src/"
+
+DEST_MODULE_LOCATION[2]="/kernel/lib/"
+BUILT_MODULE_NAME[2]="clevo_acpi"
+BUILT_MODULE_LOCATION[2]="src/"
 
 MAKE[0]="make KDIR=/lib/modules/${kernelver}/build"
 CLEAN="make clean"
