tuxedo_io: include tuxedo_cc_wmi as tuxedo_io
- Clevo part now using exported interface from clevo_interfaces
- Uniwill part still works as previously
- Additional module alias for ACPI interface needed and added

--- a/dkms.conf
+++ b/dkms.conf
@@ -13,6 +13,10 @@ DEST_MODULE_LOCATION[2]="/kernel/lib/"
 BUILT_MODULE_NAME[2]="clevo_acpi"
 BUILT_MODULE_LOCATION[2]="src/"
 
+DEST_MODULE_LOCATION[3]="/kernel/lib/"
+BUILT_MODULE_NAME[3]="tuxedo_io"
+BUILT_MODULE_LOCATION[3]="src/tuxedo_io"
+
 MAKE[0]="make KDIR=/lib/modules/${kernelver}/build"
 CLEAN="make clean"
 AUTOINSTALL="yes"
