Add basic uniwill-wmi module
- Add separate uniwill-wmi module
- Add uniwill interfaces header

--- a/dkms.conf
+++ b/dkms.conf
@@ -17,6 +17,10 @@ DEST_MODULE_LOCATION[3]="/kernel/lib/"
 BUILT_MODULE_NAME[3]="tuxedo_io"
 BUILT_MODULE_LOCATION[3]="src/tuxedo_io"
 
+DEST_MODULE_LOCATION[4]="/kernel/lib/"
+BUILT_MODULE_NAME[4]="uniwill_wmi"
+BUILT_MODULE_LOCATION[4]="src/"
+
 MAKE[0]="make KDIR=/lib/modules/${kernelver}/build"
 CLEAN="make clean"
 AUTOINSTALL="yes"
